# le_maestro_des_fourmis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/structs/: body-part.c  body-part.h  body-part.inc  human.h  human.inc  position.c  position.h  position.inc  weapon.c  weapon.h  weapon.inc
test/: test-weapon-create-default-destoy.c  test-weapon-setters.c
test/structs/position/: test-copy.c  test-create-fill-destroy.c  test-init-finish.c
tests/: CMakeLists.txt
tests/structs/: CMakeLists.txt
tests/structs/body-part/: CMakeLists.txt  test-clone.c  test-copy.c  test-create-fill-destroy.c  test-damage.c  test-getters.c  test-init-finish.c  test-is-dead.c  test-modifiers.c  test-setters.c
tests/structs/position/: CMakeLists.txt  test-clone.c  test-copy.c  test-create-fill-destroy.c  test-getters.c  test-init-finish.c  test-modifiers.c  test-setters.c
tests/structs/weapon/: CMakeLists.txt  test-weapon-create-default-destoy.c  test-weapon-getters.c  test-weapon-init-finish.c  test-weapon-setters.c
