file(GLOB TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/test-*.c)
foreach(FILENAME ${TEST_FILES})
  get_filename_component(SRC ${FILENAME} NAME)
  get_filename_component(TEST ${FILENAME} NAME_WE)
  add_executable("body-part_${TEST}" ${SRC} ${SOURCE_DIR}/structs/body-part.h)
  add_dependencies("body-part_${TEST}" body-part)
  target_link_libraries("body-part_${TEST}" body-part)
  add_test("[struct] body-part : ${TEST}" "./body-part_${TEST}")
endforeach()