file(GLOB POSITION_TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/test-*.c)
foreach(FILENAME ${POSITION_TEST_FILES})
  get_filename_component(SRC ${FILENAME} NAME)
  get_filename_component(TEST ${FILENAME} NAME_WE)
  add_executable("position_${TEST}" ${SRC} ${SOURCE_DIR}/structs/position.h)
  add_dependencies("position_${TEST}" position)
  target_link_libraries("position_${TEST}" position)
  add_test("[struct] position : ${TEST}" "./position_${TEST}")
endforeach()