file(GLOB TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/test-*.c)
foreach(FILENAME ${TEST_FILES})
  get_filename_component(SRC ${FILENAME} NAME)
  get_filename_component(TEST ${FILENAME} NAME_WE)
  add_executable(${TEST} ${SRC} ${SOURCE_DIR}/structs/weapon.h)
  add_dependencies(${TEST} weapon)
  target_link_libraries(${TEST} weapon)
  add_test("[struct] weapon : ${TEST}" ./${TEST})
endforeach()