file(GLOB TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/test-*.c)
foreach(FILENAME ${TEST_FILES})
  get_filename_component(SRC ${FILENAME} NAME)
  get_filename_component(TEST ${FILENAME} NAME_WE)
  add_executable("weapon_${TEST}" ${SRC} ${SOURCE_DIR}/structs/weapon.h)
  add_dependencies("weapon_${TEST}" weapon)
  target_link_libraries("weapon_${TEST}" weapon)
  add_test("[struct] weapon : ${TEST}" "./weapon_${TEST}")
endforeach()